Fix no code overflow

--- a/static/style.css
+++ b/static/style.css
@@ -53,6 +53,8 @@ pre {
   padding: 15px 19px;
   background-color: rgba(var(--t), var(--t), var(--t), 0.05);
   border-radius: 8px;
+
+  overflow: auto;
 }
 
 main {
